--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
+    "axios": "^1.3.5",
     "framer-motion": "^7.10.2",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
